repair afer login page, aded funcionality to fronte-end, added to do things to data base and plan documnet, deleted form document not neede funcjonality

--- a/react-django/frontend/gui/src/containers/style.css
+++ b/react-django/frontend/gui/src/containers/style.css
@@ -37,13 +37,13 @@
 .categories-progres{
   
   padding-right: 15%;
-  margin-top: 20%;
+  margin-top: 14%;
 }
 .limitCat {
     float: left;
-    margin-top: 14%;
-    font-size: 35px;
-
+    margin-top: 1%;
+    margin-bottom: 5%;
+    font-size: 25px;
 }
 .logout {
     float: right;
