--- a/react-django/frontend/gui/src/components/style.css
+++ b/react-django/frontend/gui/src/components/style.css
@@ -2,3 +2,14 @@
     float: left;
     margin-right: 3%;
 }
+.categories-progres{
+  
+    padding-right: 15%;
+    margin-top: 14%;
+  }
+  .limitCat {
+      float: left;
+      margin-top: 1%;
+      margin-bottom: 5%;
+      font-size: 25px;
+  }
