--- a/react-django/frontend/gui/src/components/style.css
+++ b/react-django/frontend/gui/src/components/style.css
@@ -3,12 +3,12 @@
     margin-right: 3%;
 }
 .categories-progres{
-  
+    clear: both;
     padding-right: 15%;
-    margin-top: 14%;
+    margin-top: 17%;
   }
   .limitCat {
-      float: left;
+      clear: both;
       margin-top: 1%;
       margin-bottom: 5%;
       font-size: 25px;
