--- a/react-django/frontend/gui/src/components/style.css
+++ b/react-django/frontend/gui/src/components/style.css
@@ -13,3 +13,18 @@
       margin-bottom: 5%;
       font-size: 25px;
   }
+  .grey{
+      color: grey;
+  }
+  .green{
+    color: green;
+}
+.red{
+    color: red;
+}
+.limit {
+    float: left;
+    margin-left: 10%;
+    margin-top: 14%;
+    font-size: 35px;
+  }
