--- a/react-django/frontend/gui/src/containers/style.css
+++ b/react-django/frontend/gui/src/containers/style.css
@@ -18,7 +18,9 @@
     padding-right: 8%;
 }
 .cont-paiments {
-    margin-top: 70px; 
+    margin-top: 8%; 
+    margin-left: 4%;
+    margin-right: 4%;
 }
 .add-button {
     margin-left: 60%;
